crates/deptree-cli/tests/snapshots/python_test__class_method_imports.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "base_module";
    "class_imports";
    "class_imports" -> "base_module";
}
