crates/deptree-cli/tests/snapshots/python_test__cytoscape_highlighted_mode.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: serialized
---
{
  "nodes": [
    {
      "id": "main",
      "type": "module",
      "is_orphan": false,
      "highlighted": true
    },
    {
      "id": "pkg_a.module_a",
      "type": "module",
      "is_orphan": false,
      "highlighted": true
    },
    {
      "id": "pkg_b.module_b",
      "type": "module",
      "is_orphan": false
    }
  ],
  "edges": [
    {
      "source": "main",
      "target": "pkg_a.module_a"
    },
    {
      "source": "main",
      "target": "pkg_b.module_b"
    },
    {
      "source": "pkg_a.module_a",
      "target": "pkg_b.module_b"
    }
  ],
  "config": {
    "include_orphans": false,
    "include_namespaces": false,
    "highlighted_modules": [
      "main",
      "pkg_a.module_a"
    ]
  }
}
