crates/deptree-cli/tests/snapshots/python_test__cytoscape_with_namespace_packages.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: serialized_with_ns
---
{
  "nodes": [
    {
      "id": "pep420_namespace",
      "type": "namespace_group",
      "is_orphan": false
    },
    {
      "id": "legacy_namespace.submodule.module",
      "type": "module",
      "is_orphan": false
    },
    {
      "id": "normal_pkg.consumer",
      "type": "module",
      "is_orphan": false
    },
    {
      "id": "pep420_namespace.sub_a.module_a",
      "type": "module",
      "is_orphan": false,
      "parent": "pep420_namespace"
    },
    {
      "id": "pep420_namespace.sub_b.module_b",
      "type": "module",
      "is_orphan": false,
      "parent": "pep420_namespace"
    }
  ],
  "edges": [
    {
      "source": "normal_pkg.consumer",
      "target": "legacy_namespace.submodule.module"
    },
    {
      "source": "normal_pkg.consumer",
      "target": "pep420_namespace.sub_b.module_b"
    },
    {
      "source": "pep420_namespace.sub_a.module_a",
      "target": "normal_pkg.consumer"
    },
    {
      "source": "pep420_namespace.sub_b.module_b",
      "target": "pep420_namespace.sub_a.module_a"
    }
  ],
  "config": {
    "include_orphans": false,
    "include_namespaces": true
  }
}
