crates/deptree-cli/tests/snapshots/python_test__cytoscape_with_scripts.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: serialized
---
{
  "nodes": [
    {
      "id": "scripts",
      "type": "namespace_group",
      "is_orphan": false
    },
    {
      "id": "foo.bar",
      "type": "module",
      "is_orphan": false
    },
    {
      "id": "scripts.blah",
      "type": "script",
      "is_orphan": false,
      "parent": "scripts"
    },
    {
      "id": "scripts.runner",
      "type": "script",
      "is_orphan": false,
      "parent": "scripts"
    },
    {
      "id": "scripts.utils.helper",
      "type": "script",
      "is_orphan": false,
      "parent": "scripts"
    }
  ],
  "edges": [
    {
      "source": "scripts.blah",
      "target": "foo.bar"
    },
    {
      "source": "scripts.runner",
      "target": "foo.bar"
    },
    {
      "source": "scripts.runner",
      "target": "scripts.utils.helper"
    }
  ],
  "config": {
    "include_orphans": false,
    "include_namespaces": false
  }
}
