crates/deptree-cli/tests/snapshots/python_test__downstream_highlighted_dot.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    // Note: Highlighted nodes are shown with light blue background
    subgraph cluster_root {
        label = "root";
        "main";
    }
    "main";
    "pkg_a.module_a";
    "pkg_b.module_b";
    "main" -> "pkg_a.module_a";
    "main" -> "pkg_b.module_b";
    "pkg_a.module_a" -> "pkg_b.module_b";
}
