crates/deptree-cli/tests/snapshots/python_test__downstream_max_rank_unlimited.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
main
pkg_a.module_a
pkg_b.module_b
